# travel-mcp-server

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
k8s/: configmap.yaml  deployment.yaml  namespace.yaml  service.yaml
src/travel_mcp/: __main__.py  server.py
src/travel_mcp/mock_data/: flights.py  hotels.py  poi.py  weather.py
src/travel_mcp/tools/: budget.py  flights.py  hotels.py  itinerary.py  poi.py  weather.py
ui/: .npmrc  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
ui/app/: layout.tsx  page.tsx
ui/app/api/tools/[tool]/: route.ts
ui/components/: BudgetTab.tsx  FlightsTab.tsx  HotelsTab.tsx  ItineraryTab.tsx  PoiTab.tsx  WeatherTab.tsx  ui.tsx
ui/lib/: mcp.ts
