[project]
name = "travel-mcp-server"
version = "0.1.0"
description = "AI-powered travel planner MCP server"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
travel-mcp = "travel_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/travel_mcp"]
